--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a href="#">Realidade Virtual</a>
       </nav>
     </header>
-    <main class="container">
+    <main class="grid container">
       <section id="featured" class="grid grid-flow-col gap-16">
         <figure class="card">
           <img
