--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         </div>
       </section>
 
-      <div>
+      <aside>
         <div id="ads">
           <img src="./assets/images/Ads.png" alt="" />
         </div>
@@ -297,7 +297,8 @@
               <div>
                 <span class="content-tag">Software</span>
                 <h3 class="text-xl">
-                  Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e pro...
+                  Aplicativo de monitoramento ambiental ganha destaque,
+                  incentivando práticas ecológic...
                 </h3>
               </div>
             </article>
@@ -312,7 +313,8 @@
               <div>
                 <span class="content-tag">Realidade Virtual</span>
                 <h3 class="text-xl">
-                  Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial complet...
+                  Óculos de realidade virtual com feedback tátil proporcionam
+                  uma experiência sensorial...
                 </h3>
               </div>
             </article>
@@ -327,7 +329,8 @@
               <div>
                 <span class="content-tag">CriptoMoedas</span>
                 <h3 class="text-xl">
-                  Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o i...
+                  Surge uma nova moeda digital baseada em tecnologias
+                  sustentáveis, buscando minimi...
                 </h3>
               </div>
             </article>
@@ -342,7 +345,8 @@
               <div>
                 <span class="content-tag">Drones</span>
                 <h3 class="text-xl">
-                  Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o ce...
+                  Empresas de e-commerce implementam frota de drones para
+                  entregas rápidas, transformando...
                 </h3>
               </div>
             </article>
@@ -357,13 +361,14 @@
               <div>
                 <span class="content-tag">Impressão 3D</span>
                 <h3 class="text-xl">
-                  Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina e a li...
+                  Tecnologia inovadora permite a impressão 3D de órgãos humanos,
+                  revolucionando a medicina...
                 </h3>
               </div>
             </article>
           </div>
         </section>
-      </div>
+      </aside>
     </main>
   </body>
 </html>
